variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: value unary_! is not a member of Int
while(!2 * biscuits = caseOrange + 1 ){avance()} 
      ^